@@ -93,7 +93,7 @@ Referring to :func:`nothing <>`.
                 * expression
    :returns: a new :class:`Time` instance
    :rtype: Time
-   :raises ValueError: if the values are out of range
+   :raises Error: if the values are out of range
    :ivar int hour: like *hour*
    :ivar minute: like *minute*
    :vartype minute: int
