@@ -6,6 +6,8 @@ Bugs fixed
 
 * applehelp: Sphinx crashes if ``hiutil`` or ``codesign`` commands not found
 * Fix ``make clean`` abort issue when build dir contains regular files like ``DS_Store``.
+* Python domain signature parser now uses the xref mixin for 'exceptions',
+  allowing exception classes to be autolinked.
 
 Release 1.4.5 (released Jul 13, 2016)
 =====================================
